sql_practice_local/kubernetes-with-python/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sql-practice
  labels:
    app: sql-practice
    environment: local
